index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 <body>
   <main class="container" style="max-width:880px; margin:0 auto; padding:24px 16px;">
 
-    <h1>교육행정 업무 효율화 지원 웹페이지</h1>
-    <p class="subtitle">부제: 제작·운영 — 씩씩하고 귀여운 고주무관</p>
+    <h1>개인용 업무 보조 사이트</h1>
+    <p class="subtitle">제작·운영 — 씩씩하고 귀여운 고주무관</p>
 
     <p class="muted">
-      ·학교 행정 업무 수행 과정에서 반복되는 산출·정리 업무를 구조화하여, 업무 효율성과 정확성을 높이기 위해 설계·제작한 지원 페이지입니다.<br/>
-      ·현재는 서버/클라우드 연동 없이 계산·정리 기능 중심으로 운영 중이며, 업무 여건이 허용되는 범위 내에서 단계적으로 고도화할 예정입니다.<br/>
+      ·나만을 위한 개인 전용 특화 업무 보조 사이트. 배포용 아님<br/>
+      ·기면병이 없는 자, 나에게 돌을 던지지 말라.<br/>
     </p>
 
     <hr />
