--- a/index.html
+++ b/index.html
@@ -61,123 +61,11 @@
 
     <!-- ================================ 구분선 ================================ -->
 
-    <!-- 교육공무직 인건비 관련 기능 
-    <section class="section">
-      <h2 style="font-size:1.2rem; margin:0 0 12px">교육공무직 인건비 관련</h2>
-      <hr />
+    <div style="margin-bottom:10px">
+  <a class="btn" href="/dashboard/">대시보드</a>
+  <div class="btn-desc">·오늘 내일 마감 업무 등</div>
+</div>
 
-      <div>
-        <a class="btn" href="/ordinary-wage/">교육공무직 통상임금 계산기</a>
-        <div class="btn-desc">·직종별 보수표 반영 (완성도 괜찮음. 베타 테스트 가능)</div>
-      </div>
-
-      <div>
-        <a class="btn" href="/vacation-weekly-holiday-wage/">조리종사원 및 청소원 방학근무 인건비 일할 계산기</a>
-        <div class="btn-desc">·방학중 근무수당, 주휴수당 등 산출식 (덜 만듦. 추가 작업 필요)</div>
-      </div>
-
-      <div>
-        <a class="btn" href="/cook-industrial-safety-education-pay/">조리종사원 산업안전보건교육비 계산기</a>
-        <div class="btn-desc">·방학중 집체교육비, 학기중 온라인 교육비 (완성도 괜찮음. 베타 테스트 가능)</div>
-      </div>
-
-      <div>
-        <a class="btn" href="/effect-of-working-during-vacation/">방학중 비상시근로자의 방학근무로 인한 부수적인 영향 계산기</a>
-        <div class="btn-desc">·출근율 산정, 연차 유급휴가 일수 계산, 연말정산, 사회보험료 상승분 등 (대충 만듦. 추가 작업 필요)</div>
-      </div>
-
-      <div>
-        <a class="btn" href="/annual-leave-calculator/">복무상황 집계 해드림 (미완)</a>
-        <div class="btn-desc">·나이스 원자료 CSV 파일 올리면 복무 종류별로 집계. pyodide 사용. (덜 만듦. 추가 작업 필요)</div>
-      </div>
-
-      <div>
-        <a class="btn" href="/annual-leave/">교육공무직 연차 유급휴가 일수 계산기 (미완)</a>
-        <div class="btn-desc">·C++ 실행 파일과 다른 양식. (대충 만듦. 추가 작업 필요)</div>
-      </div>
-
-      <div>
-        <a class="btn" href="/annual-leave-pay/">교육공무직 연차 유급휴가 미사용 수당 계산기 (미완)</a>
-        <div class="btn-desc">·통상임금 계산기는 별도 (대충 만듦. 추가 작업 필요)</div>
-      </div>
-    </section>
-
--->
-    <!-- ================================ 구분선 ================================ -->
-
-    <!-- 계약제 교원 인건비 등 관련 
-    <section class="section">
-      <h2 style="font-size:1.2rem; margin:0 0 12px">계약제교원 인건비 예산 및 지급 관련</h2>
-      <hr />
-      <a class="btn" href="/preschool-parttime-contract-teacher/">유치원 시간제근무 기간제교원 연간 인건비 소요액 계산기</a>
-      <div class="btn-desc">·학기중 4시간 근무, 방학중 방과후 운영기간은 8시간 근무, 미운영 기간은 4시간 근무. (대충 만듦. 추가 작업 필요)</div>
-    </section>
-
--->
-    <!-- ================================ 구분선 ================================ -->
-
-    <!-- 학교운동부지도자 관련 
-    <section class="section">
-      <h2 style="font-size:1.2rem; margin:0 0 12px">학교운동부지도자, 스포츠강사 관련</h2>
-      <hr />
-
-      <div>
-        <a class="btn" href="/user-fee-ratio/">운동부지도자 수익자부담금 비율 계산기</a>
-        <div class="btn-desc">·전액 지급이 아닌 경우, 순환함수에 빠져서 수치해석으로 근사치 구함. (완성도 괜찮음. 베타 테스트 가능)</div>
-      </div>
-
-      <a class="btn" href="/sports-contract-teacher-budget-calculator/">스포츠강사 연간 인건비 소요액 계산기</a>
-      <div class="btn-desc">·2025회계 기준 (대충 만듦. 추가 작업 필요)</div>
-
-      <a class="btn" href="/dc-retirement/">DC형 퇴직연금 소요액 계산기</a>
-      <div class="btn-desc">·학교운동부지도자, 스포츠강사, 특수운영직군 등. 회계연도 선택 가능 (완성도 대충 중간쯤. 추가 작업 필요.)</div>
-
-      <div>
-        <a class="btn" href="/wage-ledger-2025/">학교장 임용권자 2025 임금대장</a>
-        <div class="btn-desc">·엑셀 파일로 변환 저장 가능하게. (추가 작업 필요. 동적 페이지로 변경 및 서버 연결 필요)</div>
-      </div>
-
-      <div>
-        <a class="btn" href="/coach-ot/">학교운동부지도자 초과근무수당 계산기</a>
-        <div class="btn-desc">·출장, 훈련 많고 수익자부담금 귀찮은 운동부지도자… (대충 만듦. 추가 작업 필요)</div>
-      </div>
-    </section>
-
--->
-    <!-- ================================ 구분선 ================================ -->
-
-    <!-- 근로계약자 
-    <section class="section">
-      <h2 style="font-size:1.2rem; margin:0 0 12px">그외 근로계약자 관련</h2>
-      <hr />
-      <div>
-        <a class="btn" href="/parttime-wage-calculator/">시급제(일급제) 근로계약자 인건비 소요액 계산기</a>
-        <div class="btn-desc">·초단시간 및 단시간 근로자 자동 구분됨. (완성도 괜찮음. 베타 테스트 가능)</div>
-      </div>
-    </section>
-
--->
-    <!-- ================================ 구분선 ================================ -->
-
-    <!-- 기타 미분류 
-    <section class="section">
-      <h2 style="font-size:1.2rem; margin:0 0 12px">기타 미분류 기능</h2>
-      <hr />
-
-      <div>
-        <a class="btn" href="/travel-expenses-verifier/">관내여비 지급내역 검증기</a>
-        <div class="btn-desc">·반일/종일 여부에 따라 1만원/2만원 지급됐는지 CSV 파일 업로드하면 검증 (덜 만듦. 추가 작업 필요)</div>
-      </div>
-
-      <!-- 기능 숨김. 일단 주석 처리
-      <div>
-        <a class="btn" href="/travel-audit/">관내여비 지급 내역 점검기</a>
-        <div class="btn-desc">·번외: 감사관님의 노가다를 줄여보자. (완성도 없음. 동적 페이지로 변경, 클라우드 서버 연결 필요)</div>
-      </div>
-      
-    </section>
-
--->
     <!-- ================================ 구분선 ================================ -->
 
     <!-- 업무 관련 툴 -->
@@ -196,22 +84,6 @@
       </div>
     </section>
 
-    <!-- ================================ 구분선 ================================ 
-
-    <section class="section">
-      <h2 style="font-size:1.2rem; margin:0 0 12px">개발자 노트</h2>
-      <hr />
-      <a class="btn" href="/dev-notes/">개발자 노트 보러가기</a>
-      <div class="btn-desc">
-        ·업무 수행 과정에서 관찰한 문제와 개선 아이디어를 기록합니다. <br />
-        ·현장 경험 기반으로 기능 개선 및 자료 정리를 지속합니다. <br />
-      </div>
-
-      <a class="btn" href="/thinking-notes/">이런저런 생각들</a>
-      <div class="btn-desc">·업무와 개발, 기록에 대한 메모</div>
-    </section>
-
--->
 
     <!-- ================================ 구분선 ================================ 
 
