--- a/index.html
+++ b/index.html
@@ -61,10 +61,6 @@
 
     <!-- ================================ 구분선 ================================ -->
 
-    <div style="margin-bottom:10px">
-  <a class="btn" href="/dashboard/">대시보드</a>
-  <div class="btn-desc">·오늘 내일 마감 업무 등</div>
-</div>
 
     <!-- ================================ 구분선 ================================ -->
 
@@ -77,6 +73,12 @@
         <a class="btn" href="/calendar/">학년도별 업무 일정 모음</a>
         <div class="btn-desc">·업무 일정 (월간 달력)</div>
       </div>
+
+      <div style="margin-bottom:10px">
+  <a class="btn" href="/dashboard/">마감기한 임박 업무 대시보드</a>
+  <div class="btn-desc">·오늘, 내일, 일주일 뒤</div>
+</div>
+
 
       <div>
         <a class="btn" href="/study-log/">업무 능력 향상 노트</a>
