--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <p class="subtitle">제작·운영 — 씩씩하고 귀여운 고주무관</p>
 
     <p class="muted">
-      ·개인 전용 특화 업무 보조 사이트. 배포용 아님<br/>
-      ·기면병이 없는 자, 나에게 돌을 던질 수 없다.<br/>
+      ·개인 전용 특화 업무 보조 사이트<br/>
+      ·졸리다.<br/>
     </p>
 
     <hr />
