--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -187,8 +187,8 @@
 
         <label class="muted">조회 범위:
           <select id="rangeSel">
-            <option value="0">당일</option>
-            <option value="1">1일</option>
+            <option value="0">전체보기</option>
+            <option value="1">당일</option>
             <option value="7" selected>7일</option>
             <option value="14">14일</option>
           </select>
